# implicit_predicates

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: absl.cmake  cgal.cmake  indirect_predicates.cmake
include/implicit_predicates/: common.h  implicit_predicates.h
include/implicit_predicates/internal/: indirect_predicates.h
src/: implicit_predicates.cpp
src/internal/: det2.cpp  det3.cpp  det4.cpp  det5.cpp  diff_det2.cpp  diff_det2_one.cpp  diff_det3.cpp  diff_det3_one.cpp  diff_det4.cpp  diff_det4_one.cpp  indirect_predicates.h  stage_stats.cpp  stage_stats.h
tests/: benchmark.cpp  test_implicit_predicates.cpp
